k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: ping-pong-api
  template:
    metadata:
      labels:
        app: ping-pong-api
    spec:
      # imagePullSecrets:
      # - name: regcred
      containers:
      - name: ping-pong-api
        image: pratikbin/ping-pong-api:edge
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "150m"
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 5
          timeoutSeconds: 4
        ports:
        - name: http
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-api
spec:
  selector:
    app: ping-pong-api
  ports:
    - port: 80
      name: http
      targetPort: http
